 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2013-09-23

- r1028 Refactoring of FileIO
  - ベクトルデータのロード修正
  - 温度の読み込み変換
  - FileIO classのreadPressure/Velocity/TemperatureをCIOlibで置換 >> 削除
  - 温度の単位指定CIO::AddUnit()が不整合
  - CIOlib-3.1.5対応
  - Face Velocityの出力
  
--------------------------
2013-09-22

- r1027 recover PLOT3D format [ver 1.3.9]
  - PLOT3D関連メソッドを復活
  
  
--------------------------
2013-09-18 

- r1026 FluidDirection
  - CCNV file出力オプション追加
  - FluidDirectionのパラメータ変更
  - GeomOutput

--------------------------
2013-09-13

- r1025 Celsius [ver 1.3.8]
  - 温度単位をCelsiusのみに統一，Unit/Temperatureを削除
  - 温度の変換ルーチンを整理
  - 代表量を整理 Control::setParameters() >> setRefParameters() + setCmpParameters()
  - FButilityの圧力，温度の変換についてscaleを削除
  - FB_util.f90の速度変換について，scaleを削除
  - mat_tblを無次元化，関連メソッドで次元変換
  - xcopy(), xset()をscalr/vector用に整数インデクスで記述 > copyS3D(), copyV3D(), initScalar()
  - 収録例題のパラメータをアップデート

--------------------------
2013-09-08

- r1024 merge
  - conjugateHT ブランチをメイントランクへマージ

- r1023 conjugate heat transfer SHC1D [ver 1.3.7]
  - 温度から内部エネルギーに変換　convertTmp2IE(), convertIE2Tmp()
  - 熱伝達境界条件を整理
  - 多媒質温度計産のため，温度から内部エネルギーの基礎式に変更
  - Fortranでの多媒質対応ルーチンのため，rho, cp, lambdaの配列を作成 >> mat_tbl[]
  - d_qbc[ix*jx*kx*3] >> d_qbc[ix*jx*kx*6]へ変更 
  - ps_Diff_SM_PSOR()のd_qbc[]へのアクセスは _F_IDX_V3DEX >> _F_IDX_S4DEX
  - d_bh1をd_bcvに統合し，d_cdfに名称変更
  - SPEC_VEL_WHを削除
  - d_bh2 を d_bcdに統合
  
--------------------------
2013-09-03

- r1022 change area calculation
  - コンポーネントの面積は 要素数 x 面素 >> encodeBCindex()に追加
  - calCompoArea(), projectCompo()削除
  
- r1021 approximate component area [ver 1.3.6]
  - setGlobalCompoIdx_displayInfo()でグローバルなbboxから近似的な法線と面積を求める